Hopefully fixed logo crunch in header on iPhone

--- a/stylesheets/styles-ui.css
+++ b/stylesheets/styles-ui.css
@@ -29,3 +29,8 @@ nav a {
     transform: translateY(0); /* Show the header */
   }
   
+  .logo {
+    width: 50%; /* or any other relative size */
+    height: auto; /* Maintain the aspect ratio */
+  }
+  
